welcome.lessons.welcome.array.array123.Array123.scala.error
array123:18: error: Unmatched closing brace '}' ignored here
 }
 ^